--- a/.spacelift/config.yml
+++ b/.spacelift/config.yml
@@ -1,11 +1,17 @@
 # The version of the configuration file format
 version: 1
 # Your module version - must be changed to release a new version
-module_version: 0.1.1
+module_version: 0.1.2
 
 # The set of tests to run to verify your module works correctly
 tests:
-  - name: Test the module with 1.5.7
+  - name: Test the module with terraform 1.5.7
     terraform_version: 1.5.7
     environment:
       TF_VAR_bacon: tasty
+
+  - name: Test the module with opentofu 1.6.2
+    opentofu_version: 1.6.2
+    environment:
+      TF_VAR_bacon: bacon
+      
