--- a/.spacelift/config.yml
+++ b/.spacelift/config.yml
@@ -1,22 +1,22 @@
 # The version of the configuration file format
 version: 1
 # Your module version - must be changed to release a new version
-module_version: 0.1.8
+module_version: 0.1.9
 
 test_defaults:
   before_init: ["tofu init && tofu test"]
 
 # The set of tests to run to verify your module works correctly
 tests:
-  - name: Test the module with opentofu 1.6.2
-    opentofu_version: 1.6.2
+  - name: Test the module with terraform 1.5.7
+    terraform_version: 1.5.7
     environment:
       TF_VAR_bacon: con
-  - name: Test the module with terraform 1.6.1
-    opentofu_version: 1.6.1
+  - name: Test the module with terraform 1.4.7
+    terraform_version: 1.4.7
     environment:
       TF_VAR_bacon: acon
-  - name: Test the module with terraform 1.6.0
-    opentofu_version: 1.6.0
+  - name: Test the module with terraform 1.3.10
+    terraform_version: 1.3.10
     environment:
       TF_VAR_bacon: bacon
